Updated entrypoint to deal with java 8; no longer need armv7l dockerfile
Signed-off-by: Matt Bentley <mbentley@mbentley.net>